add circle/ci config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://mypostgres:5432/ticketing-app
+spring.datasource.url=jdbc:postgresql://ticketingapp.ceyhgqopjt3c.eu-central-1.rds.amazonaws.com/ticketingapp
 spring.datasource.username=postgres
 spring.datasource.password=Asiye1013+
 
