--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
       - run: ls -a /tmp/workspace
       - run:
           name: Create Docker image and push to ECR
-          command: aws --region eu-central-1 ecr get-login-password | docker login --username AWS --password-stdin 317010210542.dkr.ecr.eu-central-1.amazonaws.com && docker build -t ticketingapp /tmp/workspace && docker tag ticketingapp:latest 317010210542.dkr.ecr.eu-central-1.amazonaws.com/ticketingapp:latest && docker push 317010210542.dkr.ecr.eu-central-1.amazonaws.com/ticketingapp:latest
+          command: aws --region eu-central-1 ecr get-login-password | docker login -u AWS -p $(aws ecr get-login-password --region eu-central-1) 317010210542.dkr.ecr.eu-central-1.amazonaws.com && docker build -t ticketingapp /tmp/workspace && docker tag ticketingapp:latest 317010210542.dkr.ecr.eu-central-1.amazonaws.com/ticketingapp:latest && docker push 317010210542.dkr.ecr.eu-central-1.amazonaws.com/ticketingapp:latest
   deploy-job:
     docker:
       #specify the version you desire here
